--- a/styles/style.css
+++ b/styles/style.css
@@ -4,21 +4,39 @@ body{
     background-color: hsl(217, 54%, 11%);
     font-family: 'Outfit',sans-serif;
 }
-.img-eq{
-    width: 100%;    
-    height: max-content;
-    border-radius: 5px;
+.container-imgs{
+   width: 250px;    
 }
+.img-view{    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-125px);    
+}
+.container-view{
+    opacity: 0;
+    background-color: aqua;
+}
+.active{
+    opacity: 1;
+}
+.img-eq{
+    width: 250px;
+    border-radius: 15px;    
+}
+
 .card{
     background-color: hsl(216, 50%, 16%);
-    width: 23vw;
+    width: 20vw;
     margin: auto;
     border-radius: 10px;
     height: fit-content;    
     padding: 22px;
-    box-shadow: rgba(0, 0, 0, 0.301) 10px 10px 20px 10px;
-    height: fit-content;    
-    
+    box-shadow: rgba(0, 0, 0, 0.144) 10px 10px 20px 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);    
 }
 .title{
     color: hsl(0, 0%, 100%);
@@ -30,8 +48,16 @@ body{
 .eth-text{
     color:hsl(178, 100%, 50%);
     font-weight: 600;
-    font-size: .9rem;
-    
+    font-size: .9rem;    
+}
+.container-eth{    
+    width: 100px;
+    display: flex;
+    gap: 5px;    
+}
+.days-cont{
+    display: flex;
+    width: 100px;
 }
 
 .days-left{
@@ -61,8 +87,7 @@ body{
     color:rgb(155, 155, 155);
     display: none;
 }
-.attribution a{
-    
+.attribution a{    
     color: #51009c;
 }
 .attribution a:visited{
@@ -83,12 +108,13 @@ body{
     
     margin-top: .6rem;
 }
+
+
 .container-details{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: -0.6rem; 
-    /* margin-bottom: 1rem;  */
     padding: 7px 0px;
     border-bottom: 1px solid hsla(219, 15%, 55%, 0.253);
 }
