--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Outfit',sans-serif;
 }
 .card{
-    width: 20vw;
+    width: 22vw;
     background-color: hsl(216, 50%, 16%);
     padding: 1rem;
     position: absolute;
@@ -25,7 +25,7 @@ body{
 .title{
     color:hsl(0, 0%, 100%);
     /* border: 1px solid red; */
-
+    font-size: 22px;
 }
 .title:hover{
     color: hsl(178, 100%, 50%);
@@ -34,6 +34,7 @@ body{
 .subtitle{
     color: hsl(220, 15%, 55%);
     /* border: 1px solid red; */
+    font-size: 18px;
 
 }
 .container-details{
@@ -59,7 +60,7 @@ body{
 .eth-text{
     color:hsl(178, 100%, 50%);
     /* border: 1px solid red; */
-
+    font-weight: bold;
 }
 .days-cont{
     /* border: 1px solid red; */
@@ -74,7 +75,7 @@ body{
 .days-left{
     color: hsl(220, 15%, 55%);
     /* border: 1px solid red; */
-
+    font-weight: bold;
 }
 .container-author{
     display: flex;  
@@ -92,7 +93,7 @@ body{
 .img-avatar{
     width:2rem;
     height: fit-content;
-    border: 2px solid #ffffff;
+    border: 1px solid #ffffff;
     border-radius: 50%;
 }
 .author-name{
