--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body{
 .card{
     width: 22vw;
     background-color: hsl(216, 50%, 16%);
-    padding: 1rem;
+    padding: 1.5rem;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -83,10 +83,11 @@ body{
     gap: 1em;
     /* border: 1px solid red; */
     align-self: center;
+    
 }
 .creation-of{
     color: hsl(220, 15%, 55%);
-    font-size: .8em;
+    font-size: 1em;
     /* border: 1px solid red; */
 
 }
