--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,9 @@ body{
     border-radius: 1rem;
 }    
 .img-eq{
-    width:100%;
+    width:100%;  
+    height: 300px;  
     border-radius: .5rem;
-
 }
 .title{
     color:hsl(0, 0%, 100%);
@@ -35,11 +35,9 @@ body{
 .container-details{
     display: flex;
     gap: 7.3rem;        
-    width: 100%;
-    /* border: .1px solid red;    */
+    width: 100%;    
     border-bottom: 1px solid hsla(219, 15%, 55%, 0.24);
-    padding: 0 0 1rem;
-    
+    padding: 0 0 1rem;    
 }
 .container-eth{
     display: flex;
@@ -61,8 +59,7 @@ body{
     float: right;
 }
 .days-cont img{
-    width: 1.2em;
-    
+    width: 1.2em;    
 }
 .days-left{
     color: hsl(220, 15%, 55%);
