--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
     background-color: hsl(216, 50%, 16%);
     padding: 1.5rem;
     border-radius: 1rem;
-    box-shadow:none;
+    box-shadow:0px 22px 13px 13px hsl(214, 51%, 9%);
 }    
 .img-eq{
     width:100%;  
@@ -35,14 +35,14 @@ body{
 }
 .container-details{
     display: flex;
-    gap: 7.3rem;        
+    gap: 5rem;        
     width: 100%;    
     border-bottom: 1px solid hsla(219, 15%, 55%, 0.24);
     padding: 0 0 1rem;    
 }
 .container-eth{
     display: flex;
-    width: 7em;
+    width: 15em;
     gap: .4em;
 }
 .container-eth img{
@@ -55,12 +55,13 @@ body{
 }
 .days-cont{
     display: flex;
-    width: 8em;
+    width: 12em;
     gap: .4em;
-    float: right;
+    
 }
 .days-cont img{
-    width: 1.2em;    
+    width: 1.1rem;
+    height: 20px;    
 }
 .days-left{
     color: hsl(220, 15%, 55%);
