--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
     background-color: hsl(216, 50%, 16%);
     padding: 1.5rem;
     border-radius: 1rem;
-    box-shadow:0px 22px 13px 13px hsl(214, 51%, 9%);
+    box-shadow:0px 40px 13px 13px hsla(215, 52%, 9%, 0.767);
 }    
 .img-eq{
     width:100%;  
