--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
     background-color: hsl(216, 50%, 16%);
     padding: 1.5rem;
     border-radius: 1rem;
-    box-shadow:0px 40px 13px 13px hsla(215, 52%, 9%, 0.767);
+    box-shadow:0px 40px 13px 13px hsla(215, 52%, 9%, 0.514);
 }    
 .img-eq{
     width:100%;  
@@ -38,7 +38,7 @@ body{
     gap: 5rem;        
     width: 100%;    
     border-bottom: 1px solid hsla(219, 15%, 55%, 0.24);
-    padding: 0 0 1rem;    
+    padding: 0.5rem 0 1.5rem;    
 }
 .container-eth{
     display: flex;
