--- a/styles/style.css
+++ b/styles/style.css
@@ -16,9 +16,26 @@ body{
     box-shadow:0px 40px 13px 13px hsla(215, 52%, 9%, 0.514);
 }    
 .img-eq{
-    width:100%;  
-    height: 300px;  
+    width:19rem;  
+    height: 19rem;  
     border-radius: .5rem;
+}
+.bg-blue{
+    width: 19rem;
+    height: 19rem;
+    background-color: #7fffd460;
+    position: absolute;
+    transform: translate(0,-19rem);
+    opacity: 0;
+    border-radius: .5rem;
+
+}
+.bg-blue:hover{
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 .title{
     color:hsl(0, 0%, 100%);
