--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,8 @@ body{
 }
 .attribution{
     position: absolute;
-    top: 95%;
+    top: 90%;
+    left: 5%;
     color: #fff;
 }
 .attribution a{
@@ -123,6 +124,20 @@ body{
 }
 @media (max-width:500px){
     .card{
-        width: 90%;
+        width: 80%;
+    }
+    .img-eq{
+        width: 100%;
+        height: 90%;
+    }
+    .container-details{
+        gap:2.5rem;
+    }
+    .attribution{
+        position: absolute;
+        top: 110%;
+    }
+    .subtitle{
+        line-height: 1.5;
     }
 }
