--- a/styles/style.css
+++ b/styles/style.css
@@ -127,8 +127,8 @@ body{
         width: 80%;
     }
     .img-eq{
-        width: 100%;
-        height: 90%;
+        width: 18rem;
+        height: 18rem;
     }
     .container-details{
         gap:2.5rem;
@@ -139,5 +139,12 @@ body{
     }
     .subtitle{
         line-height: 1.5;
+    }
+    .bg-blue{
+        width: 18rem;
+        height: 18rem;
+    }
+    .bg-blue:hover{
+        transform: translate(0,-18rem);
     }
 }
