--- a/styles/style.css
+++ b/styles/style.css
@@ -47,14 +47,14 @@ body{
 .subtitle{
     color: hsl(220, 15%, 55%);
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1.3;
 }
 .container-details{
     display: flex;
     gap: 5rem;        
     width: 100%;    
     border-bottom: 1px solid hsla(219, 15%, 55%, 0.24);
-    padding: 0.5rem 0 1.5rem;    
+    padding: 0rem 0 1.5rem;    
 }
 .container-eth{
     display: flex;
@@ -113,7 +113,7 @@ body{
 .attribution{
     position: absolute;
     top: 90%;
-    left: 5%;
+    left: 2%;
     color: #fff;
 }
 .attribution a{
@@ -124,11 +124,11 @@ body{
 }
 @media (max-width:500px){
     .card{
-        width: 80%;
+        width: 75%;
     }
     .img-eq{
-        width: 18rem;
-        height: 18rem;
+        width: 100%;
+        height: 100%;
     }
     .container-details{
         gap:2.5rem;
