--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body{
     width: 19rem;
     background-color: hsl(216, 50%, 16%);
     padding: 1.5rem;
-    border-radius: 1rem;
+    border-radius: .7rem;
     box-shadow:0px 40px 13px 13px hsla(215, 52%, 9%, 0.514);
 }    
 .img-eq{
@@ -85,7 +85,7 @@ body{
 }
 .container-author{
     display: flex;  
-    padding-top: .7em;  
+    padding-top: .2rem;  
     gap: 1em;
     align-self: center;
     width: 100%;
