--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ body{
     gap: 5rem;        
     width: 100%;    
     border-bottom: 1px solid hsla(219, 15%, 55%, 0.24);
-    padding: 1rem 0 1.9rem;    
+    padding: .7rem 0 1.6rem;    
 }
 .container-eth{
     display: flex;
@@ -127,11 +127,11 @@ body{
         width: 75%;
     }
     .img-eq{
-        width: 100%;
-        height: 100%;
+        width: 17rem;
+        height: 16.7rem;
     }
     .container-details{
-        gap:2.5rem;
+        gap: .5rem;
     }
     .attribution{
         position: absolute;
